(bug 42731) Fix bullet point overlap in "See also" section.
Remove a bullet point image that's added by vector.css
Bug: 42731

--- a/bugzilla-4.2/skins/contrib/Wikimedia/global.css
+++ b/bugzilla-4.2/skins/contrib/Wikimedia/global.css
@@ -422,6 +422,10 @@ div.user_match {
     list-style-type: none;
 }
 
+ul.bug_urls {
+    list-style-image: none;
+}
+
 form#Create th {
     text-align: right;
 }
